@@ -2193,6 +2193,9 @@ UPDATE `item_template` SET `Flags` = 67584 WHERE `entry` = 37879;
 -- Lasher Seed (Quest: Seeds of the Lashers (Id: 12458))
 UPDATE `item_template` SET `Flags` = 2048 WHERE `entry` = 37882;
 
+-- Muddlecap Fungus (Quest: Mushroom Mixer (Id: 12514))
+UPDATE `item_template` SET `Flags` = 2048 WHERE `entry` = 38326;
+
 -- Basilisk Crystals (Quest: Gluttonous Lurkers (Id: 12527))
 UPDATE `item_template` SET `Flags`=2048 WHERE `entry`=38382;
 
